# rusty-authenticator

./: .config  .env  .gitignore  Cargo.toml  example.env
prisma/: schema.prisma
src/: main.rs  prisma.rs
src/middlewares/: validation.rs
src/types/: user.rs
